<resources>
    <string name="app_name" translatable="false">AZ Player</string>
    <string name="search_for_songs"><font size="14">search for music</font></string>
    <string name="choose_a_song">choose a song</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sort_by">Sort by</string>
    <string name="load_local_audio_files">Load local Audio files</string>
    <string name="cancel">Cancel</string>
    <string name="choose_sorting_order">Choose sorting order</string>
    <string name="sort_by_alphabetical_order">Sort by alphabetical order</string>
    <string name="sort_by_added_time">Sort by added time</string>
    <string name="no_audio_was_found">No audio was found</string>
    <string name="click_here_to_search_your_local_storage">Click here to search your local storage</string>
    <string name="search_again">Search again</string>
    <string name="noOfSongsFound">" Songs was found"</string>
    <string name="required_permission">Required Permission</string>
    <string name="storage_permission_alert_message">This permission is essential for loading audio files from your device</string>
    <string name="ok">Ok</string>
    <string name="music_player">Music Player</string>
    <string name="delete">delete</string>
    <string name="go_back">go back</string>
    <string name="playlist">Playlist</string>
    <string name="repeat_the_current_song">repeat the current song only</string>
    <string name="play_all_songs_in_the_list">play all the list</string>
</resources>