<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_display_songs_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_display_songs_root_not_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:drawablePadding="8dp"
            android:text="@string/no_audio_was_found"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_sad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_display_songs_search_local_db_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/click_here_to_search_your_local_storage"
            android:textColor="#F43636"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_display_songs_root_constraint_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_display_songs_search_bar_constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/main_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/fragment_display_songs_ed_search_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_text_view_background"
                android:drawablePadding="8dp"
                android:ellipsize="end"
                android:hint="@string/search_for_songs"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColorHint="@android:color/tertiary_text_light"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_search"
                app:layout_constraintEnd_toStartOf="@+id/fragment_display_songs_btn_more_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/fragment_display_songs_btn_more_options"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/ic_more_horiz"
                app:layout_constraintBottom_toBottomOf="@+id/fragment_display_songs_ed_search_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/fragment_display_songs_ed_search_edit_text" />

            <View
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:background="#2CAAAAAA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/fragment_display_songs_btn_more_options"
                app:layout_constraintStart_toStartOf="@+id/fragment_display_songs_ed_search_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/fragment_display_songs_ed_search_edit_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_display_songs_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_display_songs_constraint_layout_bottom_play_control"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_display_songs_search_bar_constraintLayout"
            tools:listitem="@layout/song_item" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_display_songs_constraint_layout_bottom_play_control"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/fragment_display_songs_now_playing_song_image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_image"
                app:civ_border="true"
                app:civ_border_color="#EE0014"
                app:civ_border_color_start="#FF6200EE"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragment_display_songs_controller_root_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <Button
                    android:id="@+id/fragment_display_songs_previous_btn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_previous"
                    android:layoutDirection="ltr"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/fragment_display_songs_play_btn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageButton
                    android:id="@+id/fragment_display_songs_play_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_shape"
                    android:layoutDirection="ltr"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_play_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/fragment_display_songs_next_btn"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/fragment_display_songs_next_btn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_next"
                    android:layoutDirection="ltr"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/fragment_display_songs_now_playing_song_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/choose_a_song"
                android:textAlignment="viewStart"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fragment_display_songs_controller_root_view"
                app:layout_constraintStart_toEndOf="@+id/fragment_display_songs_now_playing_song_image_view"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>